--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,12 @@
+.desc {
+  ul {
+    padding-left: 15px;
+  }
+  li {
+    font-weight: 600;
+  }
+}
+
 .logo {
   height: 60px;
   margin-top: 7px;
