--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -567,9 +567,10 @@ select {
   padding-bottom: 80px;
 }
 .why .title {
-  font-size: 36px;
-  font-weight: 300;
+  font-size: 36px;  
   margin-top: 0;
+  font-weight: 400;
+  font-family: 'Lato';
 }
 .why .intro {
   color: #999999;
@@ -577,7 +578,7 @@ select {
   font-size: 18px;
 }
 .why .item {
-  padding: 90px 0;
+  padding: 30px 0px;
   border-bottom: 1px solid #eeeeee;
 }
 .why .item.last-item {
@@ -588,6 +589,8 @@ select {
   color: #4a6781;
   margin-top: 0;
   margin-bottom: 15px;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 .why .item .desc {
   margin-bottom: 60px;
