--- a/app/views/static_pages/_comparison_chart.html.erb
+++ b/app/views/static_pages/_comparison_chart.html.erb
@@ -104,7 +104,7 @@
 
       <div class="col-xs-12 col-md-6 col-md-offset-3">
         <div class="cta-box">
-          <h3><%= link_to 'Learn More', apply_path, class: 'btn btn-cta btn-cta-secondary btn-block' %></h3>
+          <h3><%= link_to 'Learn More', apply_path, class: 'btn btn-cta btn-cta-primary btn-block' %></h3>
         </div>
       </div>
 
