--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -1,3 +1,10 @@
+.score-display {
+  position: absolute;
+  right: 20px;
+  font-weight: 600;
+  font-size: 22px; 
+}
+
 .quiz-options {
   -webkit-transition: 0.5s ease;
   -moz-transition: 0.5s ease;
