--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -16,7 +16,7 @@
         <h1 class="title">The Fast Track to Learning Web Development</h1>
         <h2>Coding Bootcamp in Nepal</h2>
         <p class="intro">
-          Learn Ruby on Rails through our interactive platform combining 1 on 1 mentor sessions, project based learning, and a supportive online community.
+          Learn Ruby on Rails through our interactive platform combining 1 on 1 mentor sessions, project based learning, and a supportive online community. Whether you are a beginner, an entrepreneur, or an aspiring developer - we are there to support you every step of the way.
         </p>
         <p>
           <a class="btn btn-cta btn-cta-primary" href="/apply">
@@ -41,7 +41,7 @@
                       <li>Build Your Portfolio</li>
                       <p>Develop several fully functional web applications and build your portfolio.</p>
                       <li>Learn Practical Skills</li>
-                      <p>Learn practical skills necessary to thrive in the market.</p>
+                      <p>Learn Ruby on Rails, one of the most in-demand skills in the world</p>
                       <li>Become a Problem Solver</li>
                       <p>Develop problem solving skills to become an in-demand software engineer.</p>
 
@@ -74,7 +74,7 @@
                       <li>Personal 1 on 1 mentor sessions</li>
                       <p>Ask questions individually, and tackle challenging problems with your mentor.</p>
                       <li>Personalized Support</li>
-                      <p>We make sure you achieve your goals by assining a personal mentor.</p>
+                      <p>We make sure you achieve your goals by matching you with a personal mentor.</p>
                       <li>Non-technical advice and guidance</li>
                       <p>Our mentors will help you get through rough times to make sure you stay motivated.</p>
                     </ul>
