--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -5,8 +5,8 @@
 }
 
 .profile img {
-  height: 250px;
-  width: 250px;
+  height: 150px;
+  width: 150px;
   border-radius: 50%;
   display: block;
   margin: 0 auto;
@@ -18,6 +18,19 @@
   }
   .content {
     padding-top: 20px;
+  }
+  p {
+    text-align: center;
+  }
+
+  .college {
+    color: #999;
+  }
+
+  .testimonial-card-break {
+    border-top: 1px solid #999;
+    width: 70px;
+    margin: 0 auto;
   }
 }
 
