--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -200,128 +200,7 @@
   <%= render 'comparison_chart' %>
 
   <!-- ******Testimonials Section****** -->
-  <section class="section testimonials">
-      <div class="container">
-          <h2 class="title text-center">What are our students saying about TECHRISE?</h2>
-
-          <div class="row">
-
-            <div class="col-xs-12 col-sm-6">
-              <div class="testimonial-card">
-                <figure class="profile"><%= image_tag 'landing_page/rabin.jpg' %></figure>
-                <div class="content">
-                    <p class="source"><span class="title">Rabin Gaire</span><br>Current Student at TECHRISE</p>
-                    <blockquote>
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                      I am a BSC.CS.IT student. <strong>I love programming, and always thought of becoming a programmer.</strong> But there was a problem whenever I try to learn something new by myself, it was like I was missing something. <strong>When I got stuck there was no one to help me.</strong> I could search it on internet but the problem was I could not get all what I want. After I joined TECHRISE <strong>I am learning about new things everyday.</strong> It's a new experience integrating new technologies. I am really happy that I am with safe hands. <strong>Thank you TECHRISE for fulfilling my dream to be a good programmer.</strong>
-                    </p>
-                    </blockquote>
-              
-                </div><!--//content-->  
-              </div><!-- testimonial-card -->
-            </div><!-- col-xs-12 col-sm-6 -->
-
-            <div class="col-xs-12 col-sm-6">
-              <div class="testimonial-card">
-                <figure class="profile"><%= image_tag 'landing_page/swojeet.jpg' %></figure>
-                <div class="content">
-                    <p class="source"><span class="title">Swojeet Kayastha</span><br />Current Student at TECHRISE</p>
-                    <blockquote>
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                      <strong>Developing web applications has always been my passion.</strong> Building a user-friendly website is challenging, but I always aspired to become a good web developer. I took some online courses and watched some YouTube playlists but at some point or another, <strong>I would always get stuck even if I followed the instructions. Since I had no one to ask, I couldn't continue on with my course.</strong> <strong>But after I joined TECHRISE, everything took a turn.</strong> Yes, building a user-friendly website is still challenging, and yes, I still get stuck but my <strong>mentors are now here to help me clear any obstacles I encounter.</strong> Whenever I have some confusions, I can easily reach out to my mentors and other students on the TECHRISE slack channel. If I have a big problem, I can swing by the office where <strong>the TECHRISE team is happy to help me out.</strong> Moreover, the TECHRISE curriculum also includes <strong>building real world apps like Instagram</strong> which fired up my eagerness to learn more. I feel great to be one of the students here at TECHRISE!
-                    </p>
-                    </blockquote>
-
-                     <h3 class="read-more"><a href="https://swojeet.github.io/swojeetkayastha_blog/2016/08/31/welcome-to-jekyll.html" target="_blank">Read about Swojeet's first month at TECHRISE</a></h3>
-                    
-                    
-                </div><!--//content--> 
-              </div><!-- testimonial-card -->
-            </div><!-- col-xs-12 col-sm-6 -->
-
-            <div class="col-xs-12 col-sm-6">
-              <div class="testimonial-card">
-                <figure class="profile"><%= image_tag 'landing_page/shreejana.jpg' %></figure>
-                <div class="content">
-                    <p class="source"><span class="title">Shreejana Poudel</span><br />Current Student at TECHRISE</p>
-
-                    <blockquote>
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                      I am very happy to say that TECHRISE is the best environment for me to learn. <strong>It has provided me with best of opportunities to enhance my potentials and build up my self-esteem.</strong> It is the perfect platform for anyone who wants to be different from the crowd. <strong>One-on-one mentor sessions are a very strong part of TECHRISE.</strong> Whenever I get stuck, my mentor is always there to help me. <strong>All the members of TECHRISE are very active and the group discussions online are amazing.</strong>
-                    </p>
-                    </blockquote>
-                    
-                </div><!--//content--> 
-              </div><!-- testimonial-card -->
-            </div><!-- col-xs-12 col-sm-6 -->   
-
-
-            <div class="col-xs-12 col-sm-6">
-              <div class="testimonial-card">
-                <figure class="profile"><%= image_tag 'landing_page/Aashik.jpg' %></figure>
-                <div class="content">
-                    <p class="source"><span class="title">Aashik Yadav</span><br />Current Student at TECHRISE</p>
-
-                    <blockquote>
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                      I always loved computers and wanted to become a great coder but <strong>I didn't know where to start</strong>. I spent hours on google, searching how to start my coding life and become a good coder but I never found one that fit. <strong>Sometimes I thought that I had made a mistake following my heart and choosing IT as my career.</strong> Then one day I finally found an ad on Facebook about TECHRISE and decided to enroll. Here <strong>I found my future and my passion</strong>. <strong>The way TECHRISE teaches is different, it's self-learning and much more goal oriented. I found my passionate family here. When I get stuck, my mentors are always there to help me. The group discussion on Slack is awesome. I really feel great to be here at TECHRISE, it changed my life. Thanks TECHRISE.</strong>
-                    </p>
-                    </blockquote>
-                    
-                </div><!--//content--> 
-              </div><!-- testimonial-card -->
-            </div><!-- col-xs-12 col-sm-6 -->
-
-
-
-            <div class="col-xs-12 col-sm-6">
-              <div class="testimonial-card">
-                <figure class="profile"><%= image_tag 'landing_page/rina.jpg' %></figure>
-                <div class="content">
-                    <p class="source"><span class="title">Rina Baral</span><br />Current Student at TECHRISE</p>
-
-                    <blockquote>
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                      TECHRISE provides a platform on developing web-apps using Ruby on Rails. In my perspective, no one will regret by joining TECHRISE. Currently, I am working on Ideator, a web application where anyone can post their ideas. It feels confusing and frustrating when stuck that I want to stop coding. But no need to worry as there are our mentors who guide us and solve our problem. We receive almost instant replies to all of our questions whenever needed.
-                    </p>
-                    </blockquote>
-
-                    <h3 class="read-more"><a href="http://www.rinabaral.com.np/2016/08/23/first-month-at-techrise-ruby-on-rails-bootcamp/" target="_blank">Read about Rina's first month at TECHRISE</a></h3>
-                    
-                </div><!--//content-->       
-              </div><!-- testimonial-card -->
-            </div><!-- col-xs-12 col-sm-6 -->
-
-                     
-
-            <div class="col-xs-12 col-sm-6">
-              <div class="testimonial-card">
-                <figure class="profile"><%= image_tag 'landing_page/aadesh.jpg' %></figure>
-                <div class="content">
-                    <p class="source"><span class="title">Aadesh Shrestha</span><br />Hired as Software Engineer at äLuxuRē after graduation<br>Currently working at TECHRISE as a Software Engineer</p>
-
-                    <blockquote>
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                      <strong>TECHRISE has been by far the best learning experience for me.</strong> My mentor, Takehiro, was very helpful during the course. He is very passionate when it comes to teaching, always willing to explain the concepts behind what we were doing. Having that understanding makes it possible to apply that knowledge in different places. <strong>These 3 months have been challenging but worth it.</strong>
-                    </p>
-                    </blockquote>
-                    
-                </div><!--//content-->                   
-              </div><!-- testimonial-card -->
-            </div><!-- col-xs-12 col-sm-6 -->
-
-            
-
-
-          </div><!-- row -->          
-      </div><!--//container-->
-  </section><!--//testimonials--> 
+  <%= render 'testimonials' %>
 
   <section class="section testimonials-section">
     <div class="container text-center">
