--- a/app/views/static_pages/_testimonials.html.erb
+++ b/app/views/static_pages/_testimonials.html.erb
@@ -98,7 +98,7 @@
           <div class="testimonial-card">
             <figure class="profile"><%= image_tag 'landing_page/aadesh.jpg' %></figure>
             <div class="content">
-                <p><strong>Aadesh Shrestha</strong>, <span class="college">Now Software Engineer at TECHRISE</span></p>
+                <p><strong>Aadesh Shrestha</strong><br><span class="college">Now Software Engineer at TECHRISE</span></p>
 
                 <div class="testimonial-card-break"></div>
 
