--- a/app/assets/stylesheets/apply.scss
+++ b/app/assets/stylesheets/apply.scss
@@ -168,6 +168,7 @@ $darkblue: #253340;
     background: white;
     border: 2px solid $darkblue;
     border-radius: 4px;
+    margin-top: 20px;
   }
 
   .explore-programs-title {
