--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -511,7 +511,9 @@ section {
 }
 
 .testimonials-section {
-  margin: 60px 0px;
+  margin: 60px 0px 0px;
+  background: whitesmoke;
+  padding: 60px 0px;
 }
 
 a.anchor {
