--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,8 +13,9 @@
     <div class="container text-center">       
         <%= render "shared/flash_messages" %>
 
-        <h1 class="title" style="margin-bottom: 5px">The Fast Track to Learning Web Development</h1>
-        <h2>Coding Bootcamp in Nepal</h2>
+        <h2 style="letter-spacing: 4px;">Coding Bootcamp in Nepal</h2>
+        <h1 class="title">The Fast Track to Learning Web Development</h1>
+        
         <p class="intro" style="font-weight:600">
           Learn Ruby on Rails through our interactive platform combining 1 on 1 mentor sessions, project based learning, and a supportive online community. Whether you are a beginner, an entrepreneur, or an aspiring developer - we are there to support you every step of the way.
         </p>
