--- a/app/views/rspec_blog_lessons/lessons/lesson_19.html.erb
+++ b/app/views/rspec_blog_lessons/lessons/lesson_19.html.erb
@@ -1,5 +1,3 @@
-
-
 <p>
   Now that we've got our model validations set up, let's continue with writing our test for the <code>create</code> action.
 </p>  
@@ -59,6 +57,11 @@ end
 
 <pre><code class="ruby">
 context "when attributes are valid" do
+  it "creates a new post" do
+    expect {
+      post :create, post: FactoryGirl.attributes_for(:post)
+    }.to change(Post, :count).by(1)
+  end
   it "redirects to root_path" do
     post :create, post: FactoryGirl.attributes_for(:post)
     expect(response).to redirect_to root_path
@@ -93,6 +96,11 @@ bundle exec rspec
 
 <pre><code class="ruby">
 context "when attributes are invalid" do
+  it "doesn't create a new post" do
+    expect {
+      post :create, post: FactoryGirl.attributes_for(:invalid_post)
+    }.to change(Post, :count).by(0)
+  end
   it "renders the new template" do
     post :create, post: FactoryGirl.attributes_for(:invalid_post)
     expect(response).to render_template :new
