--- a/app/views/questions/_for_lesson.html.erb
+++ b/app/views/questions/_for_lesson.html.erb
@@ -49,7 +49,7 @@
 
             <div class="col-xs-12 col-sm-6">
               <div class="question_content">
-                <h5 class="question_container_title"><%= link_to question.title, question_path(question) %></h5>
+                <h5 class="question_container_title"><%= link_to question.title, question_path(question.id) %></h5>
                 <div class="question_container_information">
                   <span class="question_container_time"><%= time_ago_in_words(question.created_at) %> ago</span> by <span class="question_container_user"><%= question.user_name %></span>
                 </div><!-- question_container_information -->
