--- a/app/views/user_mailer/new_question.html.erb
+++ b/app/views/user_mailer/new_question.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-  	<p>New question! <%= link_to 'Access the question here.', question_url(@question) %></p>
+  	<p>New question! <%= link_to 'Access the question here.', question_url(@question.id) %></p>
   </body>
 
   </html>
