--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -23,6 +23,14 @@
   top: 10px;
   right: 0px;
   left: 0px;
+  p, h1, h2, h3, h4, h5, h6 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  pre {
+    margin: 0px;
+  }
 }
 
 .quiz-container-inner {
