--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -101,7 +101,7 @@
 
 
 <div class="row">
-  <%= render partial: 'course', locals: {course: 'Filmster - An online movie reviewing app', course_name: '', available: true, controller_name: 'FilmsterLesson', course_link: filmster_path, course_access: 'filmstery' } %>
+  <%= render partial: 'course', locals: {course: 'Filmster - An online movie reviewing app', course_name: '', available: true, controller_name: 'FilmsterLesson', course_link: filmster_path, course_access: 'filmster' } %>
 
   <%= render partial: 'course', locals: {course: 'Algorithms and Data Structures', course_name: 'Learning how to solve algorithms challenges will help you think logically and solve difficult problems in programming.', available: false, controller_name: 'AlgorithmLesson', course_link: algorithm_path, course_access: 'algorithm' } %>
 
