--- a/app/views/filmster_lessons/lessons/lesson_16.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_16.html.erb
@@ -162,7 +162,12 @@ $('#movies').on('click', 'img', function(e){
   </ul>
 </ul>
 
+<p>
+  Push your code to github and heroku and submit your github repository and heroku application link down below:
+</p>
 
+
+<% @submission_form = true %>
 
 
 
