--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -18,7 +18,7 @@
     <%= render 'sidebar' %>
   </div>    
 
-  <div class="col-xs-11">
+  <div class="col-xs-11 col-md-7 col-md-offset-2">
 
     <section class="lesson_content">
 
